Updating main colors to be more red

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,18 +31,18 @@ p + p {
 }
 p a {
   /* text-decoration: underline */
-  color: #008AFF;
+  color: #CC0000;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 a {
-  color: #008AFF;
+  color: #CC0000;
 }
 a:hover,
 a:focus {
-  color: #0085a1;
+  color: #A30000;
 }
 blockquote {
   color: #808080;
@@ -97,12 +97,12 @@ div.panel-body a.list-group-item.view-all {
 ::-moz-selection {
   color: white;
   text-shadow: none;
-  background: #0085a1;
+  background: #A30000;
 }
 ::selection {
   color: white;
   text-shadow: none;
-  background: #0085a1;
+  background: #A30000;
 }
 img::selection {
   color: white;
@@ -157,7 +157,7 @@ img {
 .navbar-custom .navbar-brand:focus ,
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #0085a1;
+  color: #A30000;
 }
 
 .navbar-custom .navbar-brand-logo {
@@ -357,7 +357,7 @@ footer .theme-by {
 .post-preview a:focus,
 .post-preview a:hover {
   text-decoration: none;
-  color: #0085a1;
+  color: #A30000;
 }
 
 .post-preview .post-title {
@@ -432,7 +432,7 @@ footer .theme-by {
 }
 
 .blog-tags a {
-  color: #008AFF;
+  color: #CC0000;
   text-decoration: none;
   padding: 0px 5px;
 }
@@ -443,7 +443,7 @@ footer .theme-by {
 
 .blog-tags a:hover {
   border-radius: 2px;
-  color: #008AFF;
+  color: #CC0000;
   background-color: #CCC;
 }
 
@@ -642,8 +642,8 @@ footer .theme-by {
 .pager li a:hover,
 .pager li a:focus {
   color: #FFF;
-  background: #0085a1;
-  border: 1px solid #0085a1;
+  background: #A30000;
+  border: 1px solid #A30000;
 }
 
 .pager {
@@ -756,11 +756,11 @@ div.splitbox div.right {
     padding: 15px 25px;
   }
 }
-.disqus-comments button:hover, 
+.disqus-comments button:hover,
 .disqus-comments button:focus {
   color: #FFF;
-  background: #0085a1;
-  border: 1px solid #0085a1;
+  background: #A30000;
+  border: 1px solid #A30000;
 }
 
 /* Related posts */
