--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,6 +5,19 @@
       <article role="main" class="blog-post">
         {{ .Content }}
 
+        {{ if .Site.Params.showRelatedPosts }}
+          {{ $related := .Site.RegularPages.Related . | first 3 }}
+          </hr>
+          {{ with $related }}
+          <h3 class="see-also">{{ i18n "seeAlso" | upper }}</h3>
+          <ul>
+          {{ range . }}
+            <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+          {{ end }}
+          </ul>
+          {{ end }}
+        {{ end }}
+
         {{ if .Params.tags }}
           <div class="blog-tags">
             {{ range .Params.tags }}
@@ -20,18 +33,6 @@
                 {{ partial "share-links" . }}
               </div>
             </section>
-        {{ end }}
-
-        {{ if .Site.Params.showRelatedPosts }}
-          {{ $related := .Site.RegularPages.Related . | first 3 }}
-          {{ with $related }}
-          <h4 class="see-also">{{ i18n "seeAlso" }}</h4>
-          <ul>
-          {{ range . }}
-            <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-          {{ end }}
-          </ul>
-          {{ end }}
         {{ end }}
       </article>
 
@@ -54,7 +55,7 @@
       {{ if (.Params.comments) | or (and (or (not (isset .Params "comments")) (eq .Params.comments nil)) (and .Site.Params.comments (ne .Type "page"))) }}
         {{ if .Site.DisqusShortname }}
           {{ if .Site.Params.delayDisqus }}
-          <div class="disqus-comments">                  
+          <div class="disqus-comments">
             <button id="show-comments" class="btn btn-default" type="button">{{ i18n "show" }} <span class="disqus-comment-count" data-disqus-url="{{ trim .Permalink "/" }}">{{ i18n "comments" }}</span></button>
             <div id="disqus_thread"></div>
 
