--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,10 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <article role="main" class="blog-post">
+        {{ if .Params.showDisclosure }}
+          {{ partial "disclosure" . }}
+        {{ end }}
+        
         {{ .Content }}
 
         {{ if .Site.Params.showRelatedPosts }}
