--- a/layouts/partials/disclosure.html
+++ b/layouts/partials/disclosure.html
@@ -1,5 +1,6 @@
 <p class="disclosure text-muted">
-  <i class="fa fa-info-circle fa-2x fa-pull-left fa-border" aria-hidden="true"></i>If you're reading this, there is a chance that I'm earning money via
+  <i class="fa fa-info-circle fa-2x fa-pull-left fa-border" aria-hidden="true"></i>
+  If you're reading this, there is a chance that I'm earning money via
   affiliate links.  Please see the
   <a href="/page/disclosure/">disclosure</a> for more information.  And
   also thanks!
