adding a way to use 'converted: true' in frontmatter to show a warning

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,7 +6,10 @@
         {{ if .Params.showDisclosure }}
           {{ partial "disclosure" . }}
         {{ end }}
-        
+        {{ if .Params.converted }}
+          {{ partial "converted" . }}
+        {{ end }}
+
         {{ .Content }}
 
         {{ if .Site.Params.showRelatedPosts }}
